--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>404 not found</title>
-    <link rel="shortcut icon" href="./devchallenges.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./images/devchallenges.png" type="image/x-icon" />
     <link rel="stylesheet" href="./styles.css">
 </head>
 
@@ -16,7 +16,7 @@
     </header>
     <div class="container">
         <div>
-            <img class="image" src="./Scarecrow.png" alt="">
+            <img class="image" src="./images/Scarecrow.png" alt="">
         </div>
         <div class="items">
             <a >I have bad news for you</a>
